toggle butotn width + code overflow fixed

--- a/sheet_files/sheets.css
+++ b/sheet_files/sheets.css
@@ -124,6 +124,7 @@ code {
 
 pre.sourceCode {
 	background-color: #fff;
+	overflow-x: auto;
 }
 
 blockquote {
@@ -189,7 +190,7 @@ hr {
 
 details {
     border: solid 1px rgb(var(--theme-col));
-    width: 6em;
+    display: inline-block;
     border-radius: 5px;
     margin: 1em 0 2em 0;
     background-color: rgb(var(--theme-col));
